# kidder

./: CMakeLists.txt  README.md
app/: signaltiming.cpp
include/: sgt_macro.h
src/signal/: CMakeLists.txt  SignalHandler.cpp  SignalHandler.h
